# SFML_Platformer_Level_Editor

./: ButtonObject.hpp  CMakeLists.txt  CollisionObject.cpp  CollisionObject.hpp  EntityObject.cpp  EntityObject.hpp  MenuObject.cpp  MenuObject.hpp  Object.cpp  Object.hpp  Physics.cpp  Player.cpp  Player.hpp  README.md  SFML_Platformer_EXPERIMENTAL.sln  SFML_Platformer_EXPERIMENTAL.vcxproj  SFML_Platformer_EXPERIMENTAL.vcxproj.filters  Setup.hpp  enemy1.hpp  game.cpp  ground.hpp  physics.h
Entity/: EntityObject.cpp  EntityObject.hpp  Player.cpp  Player.hpp  enemy1.cpp  ground.hpp
Game_Objects/: ButtonObject.cpp  ButtonObject.hpp  CollisionObject.cpp  CollisionObject.hpp  Physics.cpp  Physics.hpp
